// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessVariables component tests snapshot testing with variables 1`] = `
<Memo(ProcessDetailsProcessVariables)
  displayLabel={true}
  displaySuccess={true}
  processInstance={
    Object {
      "state": "ACTIVE",
    }
  }
  setDisplayLabel={[MockFunction]}
  setUpdateJson={[MockFunction]}
  updateJson={
    Object {
      "trip": Object {
        "begin": "2019-10-22T22:00:00Z[UTC]",
        "city": "Berlin",
        "country": "Germany",
        "end": "2019-10-30T22:00:00Z[UTC]",
        "visaRequired": false,
      },
    }
  }
>
  <Card
    data-ouia-component-type="process-variables"
    data-ouia-safe={true}
  >
    <article
      className="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Title
            headingLevel="h3"
            size="xl"
          >
            <h3
              className="pf-c-title pf-m-xl"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe={true}
            >
              Process Variables
            </h3>
          </Title>
          <Label
            color="orange"
            icon={<InfoCircleIcon />}
          >
            <span
              className="pf-c-label pf-m-orange"
            >
              <span
                className="pf-c-label__content"
              >
                <span
                  className="pf-c-label__icon"
                >
                  <InfoCircleIcon>
                    <MockedComponent />
                  </InfoCircleIcon>
                </span>
                 
                Changes are not saved yet
              </span>
            </span>
          </Label>
          <Label
            className="kogito-management-console--variables__label-fadeIn"
            color="green"
            icon={<InfoCircleIcon />}
          >
            <span
              className="pf-c-label pf-m-green kogito-management-console--variables__label-fadeIn"
            >
              <span
                className="pf-c-label__content"
              >
                <span
                  className="pf-c-label__icon"
                >
                  <InfoCircleIcon>
                    <MockedComponent />
                  </InfoCircleIcon>
                </span>
                 
                Changes are saved
              </span>
            </span>
          </Label>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <TextContent>
            <div
              className="pf-c-content"
            >
              <div>
                <mockConstructor
                  name={false}
                  onAdd={[Function]}
                  onDelete={[Function]}
                  onEdit={[Function]}
                  src={
                    Object {
                      "trip": Object {
                        "begin": "2019-10-22T22:00:00Z[UTC]",
                        "city": "Berlin",
                        "country": "Germany",
                        "end": "2019-10-30T22:00:00Z[UTC]",
                        "visaRequired": false,
                      },
                    }
                  }
                >
                  <MockedComponent
                    name={false}
                    onAdd={[Function]}
                    onDelete={[Function]}
                    onEdit={[Function]}
                    src={
                      Object {
                        "trip": Object {
                          "begin": "2019-10-22T22:00:00Z[UTC]",
                          "city": "Berlin",
                          "country": "Germany",
                          "end": "2019-10-30T22:00:00Z[UTC]",
                          "visaRequired": false,
                        },
                      }
                    }
                  />
                </mockConstructor>
              </div>
            </div>
          </TextContent>
        </div>
      </CardBody>
    </article>
  </Card>
</Memo(ProcessDetailsProcessVariables)>
`;

exports[`ProcessVariables component tests snapshot testing without variables 1`] = `
<Card
  data-ouia-component-type="process-variables"
  data-ouia-safe={true}
>
  <CardHeader>
    <Title
      headingLevel="h3"
      size="xl"
    >
      Process Variables
    </Title>
    <Label
      className="kogito-management-console--variables__label-fadeOut"
      color="green"
      icon={<InfoCircleIcon />}
    >
       
      Changes are saved
    </Label>
  </CardHeader>
  <CardBody>
    <TextContent>
      <div>
        <mockConstructor
          name={false}
          onAdd={false}
          onDelete={false}
          onEdit={false}
          src={
            Object {
              "trip": Object {
                "begin": "2019-10-22T22:00:00Z[UTC]",
                "city": "Berlin",
                "country": "Germany",
                "end": "2019-10-30T22:00:00Z[UTC]",
                "visaRequired": false,
              },
            }
          }
        />
      </div>
    </TextContent>
  </CardBody>
</Card>
`;
